# sticker-booru

./: Cargo.toml  Makefile  docker-compose.yaml  serverless.yml
src/: convert.rs  main.rs  platform.rs  types.rs
src/db/: connect.rs  models.rs
src/scryfall/: api.rs  models.rs
src/telegram/: api.rs  outbound.rs
