[package]
name = "sticker-booru"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "^0.4.6"
lambda_runtime = "^0.2.1"
lambda_http = "^0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "^0.9.18"
regex = "1"
diesel = { version = "1.3.0", features = ["postgres"] }
diesel_derives = "1.4.1"
once_cell = "1.3.1"
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
snafu = "0.6.2"
failure = "0.1.6"
