[package]
name = "sticker-booru"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "^0.4.6"
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime", branch = "async-await", package = "lambda" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
diesel = { version = "1.3.0", features = ["postgres"] }
diesel_derives = "1.4.1"
once_cell = "1.3.1"
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
anyhow = "1.0.26"
failure = "0.1.6"
tokio = { version = "0.2.11", features = ["macros"] }
reqwest = { version = "0.10.3", features = ["json"] }
warp = { git = "https://github.com/cjbassi/warp", branch = "error" }
bb8 = "0.4.0"
tokio-postgres = "0.5.2"
bb8-postgres = "0.4.0"
